--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: Awesome Website
 author: Puke684
-description: This is my website
+description: idk what I will do with this site but yea..
